# proyecta

./: .gitattributes  .gitignore  FACEBOOK_CAMPAÑA_README.md  MINING_OPTIONS.md  PROYECTA_MINING_READY.md  PUSH_TO_GITHUB.md  README.md  md_control_selection_rationale.md  push-to-github.ps1  railway.json
backend/: README.md
mdatos-ai-platform/: README.md
measles_mexico_manuscript/: FIGURE3_ASSEMBLY_GUIDE.md  FIGURE3_PUBLICATION_GUIDE.md  LOCAL_MONITOR_SETUP.md  MONITORING_COMPLETE.md  MONITOR_USAGE.md  PHASE2_COMPLETION_REPORT.md  PYMOL_TUTORIAL_PANEL_A.md  README.md  REMOTE_MONITORING_GUIDE.md  SUBMISSION_READY_SUMMARY.md
proyecta-desktop/: BUILD_AND_RELEASE.md  QUICK_START.md  index.html  package-lock.json  package.json
proyecta-desktop/src-tauri/: Cargo.toml  tauri.conf.json
proyecta-desktop/src-tauri/src/: main.rs
proyecta-miner-launcher/: .gitignore  INICIAR-MINERIA.bat  LEEME.md  PROYECTA-Miner-GUI.ps1  PROYECTA-Miner-Linux.sh  iniciar-mineria.sh  proyecta-miner.ps1
proyecta-web/: .env.production.example  .gitignore  .tmp-pages-home.html  DEPLOY-CLOUDFLARE.md  DEPLOYMENT.md  DEPLOYMENT_INFO.md  FACEBOOK-GROWTH-AUTOMATION.md  FACEBOOK-PAGE-PACK-NOVA.md  LAUNCH_SUMMARY.txt  LOCAL-API-WATCH.md  MOBILE_FIX_REPORT.md  PRODUCTION_LAUNCH.md  activar-vigilancia-nova.cmd  estado-nova.cmd  index.html  instalar-vigilancia-inicio-nova.cmd  package-lock.json  package.json  reactivar-nova.cmd  server.js  start-production.sh  tsconfig.json  vite.config.ts
reports/: measles_mexico_research.md
snake/: README.md
trajectory_contact_map_project/: README.md
(+269 files in other folders)
